# voice-agent

./: .gitignore  LICENSE  pyproject.toml
tests/: test_hardware.py  test_rl_loop.py  test_store.py  test_streaming_stt.py  test_stt.py
voice_agent/: __main__.py
voice_agent/config/: settings.py  tiers.yaml
voice_agent/core/: audio.py  hardware.py  streaming_stt.py  stt.py
voice_agent/interfaces/: cli.py
voice_agent/learning/: novelty.py  rl_loop.py  store.py  trainer.py
