[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-agent"
version = "0.1.0"
description = "Local-first speech tool (STT + TTS) with self-improvement via RL"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "torch>=2.1.0",
    "sounddevice>=0.4.6",
    "silero-vad>=5.1",
    "peft>=0.10.0",
    "faiss-cpu>=1.7.4",
    "typer>=0.12.0",
    "mcp>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
tier1 = ["TTS>=0.22.0"]
tier2 = ["f5-tts>=1.0.0"]
piper = ["piper-tts>=1.2.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
voice = "voice_agent.interfaces.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
